src/main/webapp/app/layouts/navbar/navbar.component.scss
@import '~bootstrap/scss/functions';
@import '~bootswatch/dist/flatly/variables';
@import '~bootstrap/scss/variables';

/* ==========================================================================
Navbar
========================================================================== */

.navbar-version {
  font-size: 0.65em;
  color: $navbar-dark-color;
}

.profile-image {
  height: 1.75em;
  width: 1.75em;
}

.navbar {
  padding: 0.02rem 1rem;
  .dropdown-item.active,
  .dropdown-item.active:focus,
  .dropdown-item.active:hover {
    background-color: $dark;
  }
  .navbar-title {
    color: black;
  }
  a.nav-link {
    color: black;
    font-weight: 400;
  }

  .navbar-toggler {
    &:hover {
      color: $navbar-dark-hover-color;
    }
  }
}

.active {
  background-color: rgba(255, 255, 255, 0.5);
  border-radius: 10px;
  backdrop-filter: blur(20px);
  transition-duration: 0.2s;
}

/* ==========================================================================
Logo styles
========================================================================== */
.logo-img {
  height: 45px;
  width: 45px;
  display: inline-block;
  vertical-align: middle;
  background: url('../../../content/images/Logo.png') no-repeat center center;
  background-size: contain;
}

